# picotts

pico/: CMakeLists.txt
pico/lib/: CMakeLists.txt  picoapid.h  picopal.c  picopltf.h
